add place holder blog files

--- a/_posts/01.1-how-artificial-intelligence-is-used-in-sales.md
+++ b/_posts/01.1-how-artificial-intelligence-is-used-in-sales.md
@@ -10,7 +10,7 @@ image: assets/images/leads-to-sales-conversion-ratio.png
 description: "Understand the basics of AI with examples and help decide how AI can be used in Sales for good benefits"
 # rating: 4.5
 ---
-<Summary Text>
+Summary Text here
 
 ## Artificial Intelligence basics. How others are using it?
 
