--- a/_posts/01.2-why-artificial-intelligence-is-used-in-sales.md
+++ b/_posts/01.2-why-artificial-intelligence-is-used-in-sales.md
@@ -10,7 +10,7 @@ image: assets/images/leads-to-sales-conversion-ratio.png
 description: "Why should one use AI in sales. It AI in sales more for cost benefit or revenue growth?"
 # rating: 4.5
 ---
-<Summary Text>
+Summary Text
 
 ## Artificial Intelligence basics. Why others are using it?
 
