--- a/_posts/01.3-when-artificial-intelligence-is-used-in-sales.md
+++ b/_posts/01.3-when-artificial-intelligence-is-used-in-sales.md
@@ -10,7 +10,7 @@ image: assets/images/leads-to-sales-conversion-ratio.png
 description: "What is the right time to start using AI in sales. Are you and your company at a right stage for it."
 # rating: 4.5
 ---
-<Summary Text>
+Summary Text
 
 ## Artificial Intelligence basics. When others are using it?
 
