--- a/_posts/01.4-where-artificial-intelligence-is-used-in-sales.md
+++ b/_posts/01.4-where-artificial-intelligence-is-used-in-sales.md
@@ -10,7 +10,7 @@ image: assets/images/leads-to-sales-conversion-ratio.png
 description: "Understand the various places AI can be used in Sales. With some examples and tools mentioned. Possibly help prioritise area of AI application in sales"
 # rating: 4.5
 ---
-<Summary Text>
+Summary Text
 
 ## Artificial Intelligence basics. Where others are using it?
 
